--- a/lib/generators/backbone/scaffold/templates/model.js.erb
+++ b/lib/generators/backbone/scaffold/templates/model.js.erb
@@ -1,57 +1,56 @@
-App.Models.<%= @model_class.name %> = Backbone.Model.extend({
-<% unless @associations.empty? %>
+App.Models.<%= model_class.name %> = Backbone.Model.extend({
+<%- unless associations.empty? -%>
 
   initialize: function() {
-  <% for a in @associations %>
+  <%- for a in associations -%>
     this._<%= a.name %> = new App.Collections.<%= a.class_name %>(this.get('<%= a.name %>'));
     this._<%= a.name %>.url = '<%= association_path(@model_class, a) %>';
     this.unset('<%= a.name %>', {silent: true});
-  <% end %>
+  <%- end -%>
   },
-<% end %>
-<% unless @model_class.validators.empty? %>
+<%- end -%>
+<%- unless model_class.validators.empty? -%>
 
   validate: function(attributes) {
     var self = this;
-    var errors = _.reduce(App.Models.<%= @model_class.name %>.validators, function(errors, validator) {
+    var errors = _.reduce(App.Models.<%= model_class.name %>.validators, function(errors, validator) {
       validator.validate(self, attributes, errors);
       return errors;
     }, {});
     return _.isEmpty(errors) ? undefined : errors;
   },
-<% end %>
-<% unless @associations.empty? # Create accessors for all collections %>
-  <% for a in @associations %>
+<%- end -%>
+<%- unless associations.empty? # Create accessors for all collections -%>
 
+  <%- for a in associations -%>
   <%= a.name %>: function() {
     return this._<%= a.name %>;
   },
-  <% end %>
-<% end %>
-<% for c in @model_class.accessible_attributes.empty? ? @model_class.column_names : @model_class.accessible_attributes %>
-  <% unless c == 'id' or c.end_with? '_id' %>
+  <%- end -%>
+<%- end -%>
+<%- for c in model_class.accessible_attributes.empty? ? model_class.column_names : model_class.accessible_attributes -%>
+  <%- unless c == 'id' or c.end_with? '_id' -%>
 
   <%= c.camelize(:lower) %>: function() {
     return this.get('<%= c %>');
   },
-  <% end %>
-<% end %>
-<% for c in @integer_columns # Create name helpers for integer values %>
+  <%- end -%>
+<%- end -%>
+<%- for c in integer_columns # Create name helpers for integer values -%>
 
   <%= c.name.camelize(:lower) %>Name: function() {
     return this.constructor.attributeValueName('<%= c.name %>', this.<%= c.name.camelize(:lower) %>());
   },
-<% end %>
-
+<%- end -%>
 }, {
-  <% unless @validators.empty? %>
+  <%- unless validators.empty? -%>
 
   validators: [
-  <% for v in @validators %>
+    <%- for v in validators -%>
     new Validation.<%= v.kind.capitalize %>('<%= v.attributes[0] %>'),
-  <% end %>
+    <%- end -%>
   ],
-  <% end %>
+  <%- end -%>
 
   modelName: function() {
     return I18n.t('<%= "#{@model_class.i18n_scope}.models.#{@model_class.model_name.i18n_key}" %>');
@@ -67,6 +66,6 @@ App.Models.<%= @model_class.name %> = Backbone.Model.extend({
 
 });
 
-App.Collections.<%= @model_class.name %> = Backbone.Collection.extend(
-  _.extend({model: App.Models.<%= @model_class.name %>}, App.Mixins.Collection)
+App.Collections.<%= model_class.name %> = Backbone.Collection.extend(
+  _.extend({model: App.Models.<%= model_class.name %>}, App.Mixins.Collection)
 );
